--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <figure class="logotipo"> <!--logotipo-->
                 <img src="images/invie.png" width="186" height="60" alt="Invie logotipo"/>
             </figure>
-            <nav class="menu"><!--menu-->
+            <nav class="menu" class="button"><!--menu-->
                 <ul>
                   <li>
                       <a href="index.html">Home</a>
@@ -30,7 +30,7 @@
     <div class="contenedor">
         <h1 class="titulo">Guitarras <span>Invie</span> sibles</h1><!--titulo-->
         <h3 class="title-a">Se la estrella de Rock que siempre quisiste ser</h3><!--resumen-->
-        <a class="button" href="index.html#guitarras">conoce más</a><!--boton-->
+        <a class="button" href="index.html#guitarras">Conoce más</a><!--boton-->
     </div>
     </section>
     <section id="guitarras" class="guitarras contenedor"> <!--guitarras-->
